Optimize vlc playback inkl. serverside jump to position
